test/corpus/resources-and-expressions.txt
==============================================
Nested resource
==============================================

resource privateEndpoint 'Microsoft.Network/privateEndpoints@2020-06-01' = {
  resource privateDNSZoneGroup 'privateDnsZoneGroups' = {
    name: 'dnsgroupname'
  }
}

---

(infrastructure
  (resource_declaration
    (identifier)
    (string
      (string_content))
    (object
      (object_property
        (resource_declaration
          (identifier)
          (string
            (string_content))
          (object
            (object_property
              (identifier)
              (string
                (string_content)))))))))

==============================================
Function call on property
==============================================

var a = storageAccountVulnerabilityAssessments.listKeys().foo

---

(infrastructure
  (variable_declaration
    (identifier)
    (member_expression
      (call_expression
        (member_expression
          (identifier)
          (property_identifier))
        (arguments))
      (property_identifier))))

==============================================
Unicode escape sequence
==============================================

var surrogate_codepoint = '\u{10437}'

---

(infrastructure
  (variable_declaration
    (identifier)
    (string
      (escape_sequence))))

==============================================
Multiline string with quote
==============================================

var foo = '''hello'world'''

---

(infrastructure
  (variable_declaration
    (identifier)
    (string
      (string_content))))

==============================================
String containing dollar
==============================================

var foo = 'about $3 fiddy'

---

(infrastructure
  (variable_declaration
    (identifier)
    (string
      (string_content)
      (string_content)
      (string_content))))

==============================================
String starting with dollar
==============================================

var foo = '$3 fiddy'

---

(infrastructure
  (variable_declaration
    (identifier)
    (string
      (string_content)
      (string_content))))

==============================================
String ending with dollar
==============================================

var foo = 'mucho $'

---

(infrastructure
  (variable_declaration
    (identifier)
    (string
      (string_content)
      (string_content))))

==============================================
String in interpolation
==============================================

var stringInString = 'abc${'def'}'

---

(infrastructure
  (variable_declaration
    (identifier)
    (string
      (string_content)
      (interpolation
        (string
          (string_content))))))

==============================================
String literal with starting comment
==============================================

var a = '/*'

---

(infrastructure
  (variable_declaration
    (identifier)
    (string
      (string_content))))

==============================================
Multiline string literal with starting comment
==============================================

var a = '''/*'''

---

(infrastructure
  (variable_declaration
    (identifier)
    (string
      (string_content))))

==============================================
Mixed array
==============================================

var a = [
    true
    [
      'inner'
      false
    ]
  ]

---

(infrastructure
  (variable_declaration
    (identifier)
    (array
      (boolean)
      (array
        (string
          (string_content))
        (boolean)))))

==============================================
Nested resource accessor
==============================================

resource myParent 'My.Rp/parentType@2020-01-01' = {
  name: 'myParent'
  location: 'West US'

  // declares a nested resource inside 'myParent'
  resource myChild 'childType' = {
    name: 'myChild'
    properties: {
      displayName: 'Child Resource'
    }
  }

  // 'myChild' can be referenced inside the body of 'myParent'
  resource mySibling 'childType' = {
    name: 'mySibling'
    properties: {
      displayName: 'Sibling of ${mychild.properties.displayName}'
    }
  }
}

// accessing 'myChild' here requires the resource access operator
output displayName string = myParent::myChild.properties.displayName

---

(infrastructure
  (resource_declaration
    (identifier)
    (string
      (string_content))
    (object
      (object_property
        (identifier)
        (string
          (string_content)))
      (object_property
        (identifier)
        (string
          (string_content)))
      (comment)
      (object_property
        (resource_declaration
          (identifier)
          (string
            (string_content))
          (object
            (object_property
              (identifier)
              (string
                (string_content)))
            (object_property
              (identifier)
              (object
                (object_property
                  (identifier)
                  (string
                    (string_content))))))))
      (comment)
      (object_property
        (resource_declaration
          (identifier)
          (string
            (string_content))
          (object
            (object_property
              (identifier)
              (string
                (string_content)))
            (object_property
              (identifier)
              (object
                (object_property
                  (identifier)
                  (string
                    (string_content)
                    (interpolation
                      (member_expression
                        (member_expression
                          (identifier)
                          (property_identifier))
                        (property_identifier))))))))))))
  (comment)
  (output_declaration
    (identifier)
    (type
      (primitive_type))
    (member_expression
      (member_expression
        (resource_expression
          (identifier)
          (identifier))
        (property_identifier))
      (property_identifier))))
